--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=128KB
 spring.servlet.multipart.max-request-size=128KB
 #storage
-storage.location=/var/tmp/fstorage
+storage.location=upload-dir
